--- a/index.html
+++ b/index.html
@@ -13,28 +13,53 @@
     <section class="container">
 
         <div class="row">
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
-            <div class="col-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
+            <div class="col-xs-1">1 col</div>
         </div>
 
         <div class="row">
-            <div class="col-12">12 col</div>
+            <div class="col-xs-12">12 col</div>
         </div>
 
         <div class="row">
-            <div class="col-8">col 8</div>
-            <div class="col-2">col 2</div>
-            <div class="col-2">col 2</div>
+            <div class="col-xs-8">col 8</div>
+            <div class="col-xs-2">col 2</div>
+            <div class="col-xs-2">col 2</div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-1">col 1</div>
+            <div class="col-xs-2">col 2</div>
+            <div class="col-xs-2">col 2</div>
+            <div class="col-xs-6">col 6</div>
+            <div class="col-xs-1">col 1</div>
+        </div>
+
+        
+        <div class="row">
+            <div class="col-xs-6 padding-5">
+                <div class="row">
+                    <div class="col-xs-2">Nested 2 col</div>
+                    <div class="col-xs-2">Nested 2 col</div>
+                    <div class="col-xs-8">Nested 8 col</div>
+                </div>
+            </div>
+            <div class="col-xs-6  padding-5">
+                <div class="row">
+                    <div class="col-xs-6">Nested 6 col</div>
+                    <div class="col-xs-6">Nested 6 col</div>
+                </div>
+            </div>
         </div>
 </section>
 </body>
